--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -24,14 +24,17 @@
 	}
 	&__progress-completed {
 		height: 100%;
-		width: 100%;
+		width: 0;
 		background-color: #527ccd;
-		animation-name: fill;
-		animation-duration: 4s;
-		animation-timing-function: linear;
-		transform-origin: left;
-		animation-iteration-count: infinite;
-		animation-delay: 0.5s;
+		
+		&.active {
+			width: 100%;			
+			animation-name: fill;
+			animation-duration: 4s;
+			animation-timing-function: linear;
+			transform-origin: left;
+			animation-iteration-count: infinite;
+		}
 	}
 	@keyframes fill {
 		0%,
@@ -56,6 +59,12 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		cursor: pointer;
+		transition-duration: .5s;
+
+		&:hover, &:active {
+			background-color: #C8D9FB;
+		}
 
 		&:not(:last-child) {
 			margin-right: 40px;
@@ -64,31 +73,31 @@
 	&__arrow {
 		width: 10px;
 		height: 20px;
-		background-image: url(/src/img/Vector-left.svg);
+		background-image: url(/src/img/Arrow.svg);
 		background-size: contain;
 		background-repeat: no-repeat;
 	}
 	&__arrow--reversed {
-		width: 10px;
-		height: 20px;
-		background-image: url(/src/img/Vector-right.svg);
-		background-size: contain;
-		background-repeat: no-repeat;
+		transform: scaleX(-1);
 	}
 	&__body {
-		display: flex;
-		column-gap: 40px;
 		position: relative;
+		overflow: hidden;
 		width: 100%;
-		overflow-x: scroll;
-		overflow-y: hidden;
-		height: 420px;
+	}
+	&__body-wrapper {
+		display: flex;
+  	position: relative;
+		column-gap: 40px;
+		left: -300px;
+
+		&.shifting {
+			transition: left .2s ease-out;
+		}
 	}
 	&__item {
-		position: absolute;
 		flex: 0 1 25%;
 		min-width: 260px;
-		height: 420px;
 		border: 1px solid #ccddff;
 		padding: 20px;
 		display: flex;
@@ -96,9 +105,7 @@
 		align-items: center;
 		box-sizing: border-box;
 		color: #527ccd;
-		transition: all ease 0.6s;
-		left: 0;
-		top: 0;
+		position: relative;
 
 		&.active {
 			border: 1px solid #527ccd;
